[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Loading.gd" type="Script" id=1]

[node name="Loading" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 1 )

[node name="LoadingContainer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="LoadingContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingProgress" type="ProgressBar" parent="LoadingContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -16.0
margin_right = 128.0
margin_bottom = 16.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="MinTimer" to="." method="_on_MinTimer_timeout"]
